# streamlit-cc

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app/: streamlit_app.py
src/cc_app/: algorithms.py  io.py
src/cc_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_algorithms.py  test_io.py
